<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.user.myapplication.MainActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="1"
        android:id="@+id/ask_layout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/UCSD_title"
            android:id="@+id/ask_bus_type"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ask_string"
            android:id="@+id/textView3"
            android:layout_gravity="center_horizontal" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.00">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Auto_bus_stop"
                android:id="@+id/auto_ucsd"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_toStartOf="@+id/imageView"
                android:layout_toLeftOf="@+id/imageView" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:id="@+id/Address"
                android:inputType="text"
                android:hint="@string/Enter_bus_stop"
                android:layout_below="@+id/auto_ucsd"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true" />

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:id="@+id/imageView"
                android:src="@drawable/location"
                android:contentDescription="@string/pin"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Go"
                android:id="@+id/enter_ucsd"
                android:layout_gravity="center_horizontal|top"
                android:layout_below="@+id/destination"
                android:layout_centerHorizontal="true" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/destination"
                android:hint="@string/Destination"
                android:inputType="text"
                android:ems="10"
                android:layout_below="@+id/Address"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:id="@+id/space"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/enter_ucsd"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/space"
                android:id="@+id/relativeLayout2">

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/routeID"
                    android:hint="@string/RouteID"
                    android:inputType="number"
                    android:singleLine="true"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/or"
                    android:id="@+id/textView4"
                    android:layout_gravity="center_vertical"
                    android:layout_alignBaseline="@+id/routeID"
                    android:layout_alignBottom="@+id/routeID"
                    android:layout_centerHorizontal="true" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/stopID"
                    android:hint="@string/StopID"
                    android:inputType="number"
                    android:singleLine="true"
                    android:maxLength="5"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Find"
                    android:id="@+id/findStopBut"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true" />

            </RelativeLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Find_bus_stop"
                android:id="@+id/textView5"
                android:layout_gravity="center_horizontal"
                android:layout_above="@+id/relativeLayout2"
                android:layout_centerHorizontal="true" />

        </RelativeLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="63dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/location_choice"
                android:layout_gravity="center"
                android:contentDescription="@string/location" />

        </FrameLayout>

    </LinearLayout>

</LinearLayout>